added: public sans

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -48,7 +48,7 @@ import "../styles/global.css";
 <!-- Neue Power font -->
 <link href="https://fonts.cdnfonts.com/css/neue-power" rel="stylesheet" />
 <!-- Manrope font -->
-<link href="https://fonts.cdnfonts.com/css/manrope" rel="stylesheet" />
+<link href="https://fonts.cdnfonts.com/css/public-sans" rel="stylesheet">
 
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
