--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -3,12 +3,7 @@
     class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
     <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
       <div>
-        <span class="items-center inline-flex text-accent-500"
-          ><span class="text-sm font-mono" aria-hidden="true">01</span><span
-            class="ml-3 bg-accent-500 h-3.5 w-px"></span><span
-            class="font-medium text-base ml-3 tracking-tight">Features</span
-          >
-        </span><p class="font-extrabold text-5xl text-black font-display mt-8">
+        <p class="font-extrabold text-5xl text-black font-display">
           I am a slightly longer heading than the others
         </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
           If you could kick the person in the pants responsible for most of your
@@ -24,7 +19,7 @@
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -32,7 +27,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Built with Astro.js.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -42,7 +37,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -50,7 +45,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Styled with Tailwind CSS.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -62,7 +57,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -70,7 +65,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Relived with Alpine.js
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -81,7 +76,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -89,7 +84,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Keyboard accessible.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -100,7 +95,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -108,7 +103,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Production-ready
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -118,7 +113,7 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-5 w-5"
@@ -126,7 +121,7 @@
                     role="img"
                   />
                 </div><p
-                  class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
                   Simple deploys
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
