--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -3,13 +3,7 @@
     class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24">
     <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
       <div>
-        <span class="items-center inline-flex text-accent-500"
-          ><span class="text-sm font-mono" aria-hidden="true">02</span><span
-            class="ml-3 bg-accent-500 h-3.5 w-px"></span><span
-            class="font-medium text-base ml-3 tracking-tight"
-            >More features</span
-          >
-        </span><p class="font-extrabold text-5xl text-black font-display mt-8">
+        <p class="font-extrabold text-5xl text-black font-display">
           I am a slightly longer heading than the others
         </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
           If you could kick the person in the pants responsible for most of your
