--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,13 +1,7 @@
 <section aria-labelledby="pricing" id="pricing">
   <div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
     <div class="sm:text-center">
-      <span class="inline-flex items-center text-accent-500">
-        <span class="font-mono text-sm" aria-hidden="true">2</span><span
-          class="ml-3 h-3.5 w-px bg-accent-500"></span><span
-          class="ml-3 text-base font-medium tracking-tight">Pricing</span
-        >
-      </span>
-      <p class="font-extrabold text-5xl text-black font-display mt-8"></p>
+      <p class="font-extrabold text-5xl text-black font-display"></p>
       <h2
         class="mt-6 text-4xl font-extrabold text-black font-display lg:mx-auto">
         Always know what you’ll pay,
@@ -132,7 +126,7 @@
       <section
         class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none">
         <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
-        <p class="mt-2 text-sm text-accent-200">
+        <p class="mt-2 text-sm text-accent-100">
           Perfect for those leaving 9-5 and working 24/7.
         </p>
         <p
