added: nothing, just pushing again just in case

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -12,7 +12,7 @@
         </p>
       </div><div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
-          class="items-center justify-center rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
+          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
           href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
         >
       </div>
