--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -4,10 +4,10 @@
       x-data="{ open: false }"
       class="relative flex flex-col w-full p-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
       <div class="flex flex-row items-center justify-between lg:justify-start">
-        <a href="/" class="lg:pr-8 text-black">
+        <a href="/" class="lg:pr-8 text-black inline-flex items-center gap-3">
           <svg
-            width="60"
-            height="59"
+            width="50"
+            height="49"
             viewBox="0 0 30 29"
             fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -167,6 +167,7 @@
               </filter>
             </defs>
           </svg>
+          <span class="font-bold font-display">AstroSaas</span>
         </a>
         <button
           @click="open = !open"
@@ -219,7 +220,7 @@
           </a>
           <a
             href="/login"
-            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-xl group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
+            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
             Log in
           </a>
         </div>
