--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Navigation from "../components/global/Navigation.astro";
+import Onhold from "../components/landing/Onhold.astro";
 import Hero from "../components/landing/Hero.astro";
 import SectionOne from "../components/landing/SectionOne.astro";
 import SectionTwo from "../components/landing/SectionTwo.astro";
@@ -49,13 +50,14 @@ Use AstroSeo in all the pages you want different Seo than the index page
   }}
 />
 <BaseLayout>
-  <Navigation />
+  <Onhold />
+  <!--
   <Hero />
 
-  <SectionOne />
+   <SectionOne />
   <SectionTwo />
   <Testimonial />
   <Pricing />
   <Cta />
-  <Footer />
+  <Footer /> -->
 </BaseLayout>
