--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,6 +1,156 @@
-<section class="bg-white">
+<section class="bg-white relative">
+  <svg
+    class="absolute w-full opacity-50"
+    viewBox="0 0 960 637"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg">
+    <g filter="url(#filter0_f_1_167)">
+      <ellipse
+        cx="479.5"
+        cy="318.5"
+        rx="118.5"
+        ry="118.5"
+        transform="rotate(-90 479.5 318.5)"
+        fill="#00000020"
+        fill-opacity="0.5"></ellipse>
+    </g>
+    <mask
+      id="mask0_1_167"
+      style="mask-type:alpha"
+      maskUnits="userSpaceOnUse"
+      x="0"
+      y="32"
+      width="960"
+      height="573">
+      <rect y="32" width="960" height="573" fill="url(#paint0_radial_1_167)"
+      ></rect>
+    </mask>
+    <g mask="url(#mask0_1_167)">
+      <rect x="123.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="439.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect
+        x="597.5"
+        y="41.5"
+        width="79"
+        height="79"
+        fill="white"
+        fill-opacity="0.25"
+        stroke="black"></rect>
+      <rect x="676.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="41.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="439.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="597.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="676.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="120.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect
+        x="439.5"
+        y="199.5"
+        width="79"
+        height="79"
+        fill="white"
+        fill-opacity="0.25"
+        stroke="black"></rect>
+      <rect x="518.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect
+        x="597.5"
+        y="199.5"
+        width="79"
+        height="79"
+        fill="white"
+        fill-opacity="0.25"
+        stroke="black"></rect>
+      <rect x="676.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="199.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="439.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="597.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="676.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="278.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect
+        x="360.5"
+        y="357.5"
+        width="79"
+        height="79"
+        fill="white"
+        fill-opacity="0.25"
+        stroke="black"></rect>
+      <rect x="439.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="597.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="676.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="357.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="439.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="597.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="676.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="436.5" width="79" height="79" stroke="black"></rect>
+      <rect x="123.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="202.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="281.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="360.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="439.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="518.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="597.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="676.5" y="515.5" width="79" height="79" stroke="black"></rect>
+      <rect x="755.5" y="515.5" width="79" height="79" stroke="black"></rect>
+    </g>
+    <defs>
+      <filter
+        id="filter0_f_1_167"
+        x="161"
+        y="1.14441e-05"
+        width="637"
+        height="637"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="BackgroundImageFix"
+          result="shape"></feBlend>
+        <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_1_167"
+        ></feGaussianBlur>
+      </filter>
+      <radialGradient
+        id="paint0_radial_1_167"
+        cx="0"
+        cy="0"
+        r="1"
+        gradientUnits="userSpaceOnUse"
+        gradientTransform="translate(480 318.5) rotate(90) scale(353.19 591.732)">
+        <stop stop-color="#D9D9D9" stop-opacity="0.2"></stop>
+        <stop offset="0.802083" stop-color="#D9D9D9" stop-opacity="0"></stop>
+      </radialGradient>
+    </defs>
+  </svg>
+
   <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 pt-36">
+    class="mx-auto w-full lg:px-16 relative max-w-7xl md:px-12 items-center px-8 pt-36">
     <div class="mx-auto text-center max-w-4xl p-10">
       <div>
         <p class="font-extrabold text-5xl text-black font-display">
@@ -18,8 +168,7 @@
       </div>
     </div>
   </div>
-  <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 pt-24">
+  <div class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8">
     <div>
       <img alt="dashboard" class="w-full" src="/dashboard.png" />
     </div>
