--- a/src/components/landing/Onhold.astro
+++ b/src/components/landing/Onhold.astro
@@ -1,21 +1,108 @@
 <section
-  class="bg-white h-screen flex justify-center items-center"
-  style="background-image: radial-gradient(circle at center center, rgb(252, 252, 252),rgb(129, 129, 129));">
-  <div class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8">
-    <div class="mx-auto text-center">
-      <div>
-        <p class="font-extrabold text-5xl xl:text-7xl text-black font-display">
-          Astro SaaS is coming soon, we are centering some divs.
-          <span class="xl:block"> Sorry for bothering.</span>
-        </p>
-        <p
-          class="mx-auto max-w-xl mt-4 text-lg lg:text-3xl text-gray-700 tracking-tight">
-          While you wait, you can follow me on Twitter <a
-            class="text-[#000000] hover:text-black"
-            href="https://twitter.com/Mike_Andreuzza">@Mike_Andreuzza</a
-          >
-        </p>
+  class="bg-gradient-to-t from-[#15057e] to-[#141521] neue-haas relative">
+  <div
+    class="w-full h-full -z-1 absolute flex flex-row justify-between left-0 lg:h-full lg:max-w-7xl lg:px-0 mx-auto px-6 right-0">
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+    <div class="w-full h-full border-[#f5f5f530]/5 border-x"></div>
+  </div>
+
+  <section class="flex items-center justify-center relative">
+    <svg
+      class="absolute blur-3xl right-0 opacity-80"
+      width="50%"
+      height="100%"
+      viewBox="0 0 400 400"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip0_17_60)">
+        <g filter="url(#filter0_f_17_60)">
+          <path d="M128.6 0H0V322.2L332.5 211.5L128.6 0Z" fill="#4D07E3"></path>
+          <path d="M0 322.2V400H240H320L332.5 211.5L0 322.2Z" fill="#4C00FF"
+          ></path>
+          <path d="M320 400H400V78.75L332.5 211.5L320 400Z" fill="#B5BFF1"
+          ></path>
+          <path d="M400 0H128.6L332.5 211.5L400 78.75V0Z" fill="#7fcef3"></path>
+        </g>
+      </g>
+      <defs>
+        <filter
+          id="filter0_f_17_60"
+          x="-159.933"
+          y="-159.933"
+          width="719.867"
+          height="719.867"
+          filterUnits="userSpaceOnUse"
+          color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+          <feBlend
+            mode="normal"
+            in="SourceGraphic"
+            in2="BackgroundImageFix"
+            result="shape"></feBlend>
+          <feGaussianBlur
+            stdDeviation="79.9667"
+            result="effect1_foregroundBlur_17_60"></feGaussianBlur>
+        </filter>
+      </defs>
+    </svg>
+
+    <div
+      class="relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-16 max-w-7xl lg:py-32">
+      <div class="max-w-5xl mx-auto">
+        <div class="text-left">
+          <div
+            class="grid grid-cols-1 lg:grid-cols-2 lg:items-end gap-6 lg:gap-12">
+            <div>
+              <div class="lg:inline-flex items-center gap-3">
+                <p
+                  class="text-cyan-500 lg:pl-4 lg:border-l border-white mt-3 lg:mt-0">
+                  Astro Saas
+                </p>
+              </div>
+              <p class="text-3xl mt-12 font-normal tracking-tight text-[white]">
+                Astro SaaS is coming soon, we I am centering some divs fam... <span
+                  class="italic font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-indigo-500 lg:block">
+                  Sorry for bothering.</span
+                >
+              </p>
+              <div
+                class="flex flex-col gap-3 mt-10 sm:flex-row lg:items-center">
+                <div class="flex flex-col sm:flex-row">
+                  <a
+                    class="inline-flex items-center justify-center w-full px-6 py-3 text-center text-white duration-200 bg-white/0 custom-blur font-medium hover:bg-white/5 rounded-xl border-2 border-white hover:text-white focus:outline-none lg:w-auto focus-visible:outline-black focus-visible:ring-black"
+                    href="https://twitter.com/Mike_Andreuzza"
+                    >Follow Michael &nbsp; &nbsp; &rarr;
+                  </a>
+                </div>
+                <div class="lg:pl-4 lg:border-l-2 border-white/">
+                  <p class="text-white">
+                    <span class="block">While you wait,</span>
+                    <span class="block"> you can follow me on Twitter</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <p class="max-w-xl text-white lg:text-2xl mt-6 lg:ml-auto">
+              You are going to like it, is going to be simple and nice. See you
+              on February.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        class="relative items-center w-full pb-12 mx-auto max-w-7xl mt-12 p-8 lg:p-10 rounded-[2rem] border border-white/10"
+        style="">
+        <img
+          class="w-full bg-neutral-300 rounded-3xl object-cover shadow-2xl shadow-black/80"
+          src="https://astro.build/assets/astrosaas-hero.78e2d129_Z2bsEkO.avif"
+          alt=""
+        />
       </div>
     </div>
-  </div>
+  </section>
 </section>
