--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,7 @@ Use AstroSeo in all the pages you want different Seo than the index page
 <BaseLayout>
   <Onhold />
   <!--
+    <Navigation />
   <Hero />
 
    <SectionOne />
