--- a/src/components/landing/Onhold.astro
+++ b/src/components/landing/Onhold.astro
@@ -65,7 +65,7 @@
                 </p>
               </div>
               <p class="text-3xl mt-12 font-normal tracking-tight text-[white]">
-                Astro SaaS is coming soon, we I am centering some divs fam... <span
+                Astro SaaS is coming soon, I am just centering some divs fam... <span
                   class="italic font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-indigo-500 lg:block">
                   Sorry for bothering.</span
                 >
