--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -52,3 +52,5 @@ import "../styles/global.css";
 
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
+
+<script async defer data-website-id="1723e72e-f799-4e0c-9dfe-6593bf7ca76e" src="https://stats.andreuzza.com/umami.js"></script>
